fixed link size on mobile

--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -135,7 +135,7 @@ a:focus {
     padding-bottom: 2em;
     margin-left: 0;
     margin-right: 0.7em;
-    width: 9em;
+    width: 5em;
     text-align: left;
     color: mix($text-color, $accent-color, 80%);
     text-decoration: none;
